[package]
name = "doryen-extra"
version = "0.2.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>", "Jice and the libtcod contributors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilyvion-util = "0.2"
doryen-rs = "1.2"
derivative = "1.0"
impl_ops = "0.1"
rand = {version = "0.7", optional = true, default-features = false}
rand_core = {version = "0.5", optional = true}
serde = {version = "1", optional = true}
serde_derive = {version = "1", optional = true}

[features]
default = []
debug = []
libcod-compat = []
rng_support = ["rand_core", "rand"]
serialization = ["serde", "serde_derive"]
