[package]
name = "doryen-extra"
version = "0.2.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>", "Jice and the libtcod contributors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilyvion-util = "0.3.1"
doryen-rs = {version = "1.2", optional = true}
derivative = "1.0"
impl_ops = "0.1"
rand_core = {version = "0.5", optional = true}
serde = {version = "1", optional = true}
serde_derive = {version = "1", optional = true}

[features]
default = ["doryen"]
doryen = ["doryen-rs"]
libtcod-compat = []
rng_support = ["rand_core"]
serialization = ["serde", "serde_derive"]
