[package]
name = "doryen-extra"
version = "0.1.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>", "Jice and the libtcod contributors"]
edition = "2018"
description = "Doryen-extra aims to be a loose re-implementation of the utility features from the popular roguelike library named libtcod"
keywords = ["roguelike", "gamedev", "libtcod"]
repository = "https://github.com/alexschrod/doryen-extra"
readme = "README.md"
license = "BSD-3-Clause"
categories = ["algorithms", "data-structures", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ilyvion-util = "0.3.1"
doryen-rs = {version = "1.2.3", optional = true}
derivative = "1.0"
impl_ops = "0.1"
paste = "=1.0.3"
rand_core = {version = "0.5", optional = true}
serde = {version = "1", optional = true}
serde_derive = {version = "1", optional = true}

[features]
default = ["doryen"]
doryen = ["doryen-rs"]
libtcod-compat = []
rng_support = ["rand_core"]
serialization = ["serde", "serde_derive"]
